--- a/motocicletas/primeros labs/index.html
+++ b/motocicletas/primeros labs/index.html
@@ -76,12 +76,12 @@
                 <br>
                 <br>
                 <br>
-            
+                <button id="marcas_motos" class="button is-danger is-rounded">Marcas famosas</button>
                 <div id="poster"></div>
             </div>
         </section>
     
-        <div>   
+        <div> 
             <button id="boton_info_pilotos" class="button is-info is-rounded">Información de pilotos</button>
             <button id="boton_prox_eventos" class="button is-info is-rounded">Próximos eventos</button>
             <button id="boton_imagen" class="button is-info is-rounded">Info Eventos</button>
